[package]
name = "beyond-blue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bevy = "0.8.0"
bevy_rapier2d = "0.16.0"
bevy_prototype_lyon = "0.6.0"
peer = { path = "../peer" }
tokio = { version = "1.20.1", features = ["full"] }
env_logger = "0.9.0"
clap = "3.2.17"
libp2p = "0.46.1"
async-stream = "0.3.3"
futures = "0.3.23"
log = "0.4.17"
url = "2.2.2"
serde = { version = "1.0.144", features = ["serde_derive"] }
leafwing-input-manager = "0.5.2"
