[package]
name = "peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.46.1", features = ["dcutr"] }
libp2p-yamux = "0.38.0"
futures = "0.3.21"
async-std = {version = "1.12.0", features = ["attributes"]}
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
futures-timer = "3.0.2"
