[package]
name = "peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
libp2p = { version = "0.46.1", features = ["dcutr"] }
libp2p-yamux = "0.38.0"
futures = "0.3.21"
async-std = {version = "1.12.0", features = ["attributes"]}
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
futures-timer = "3.0.2"
rand_core = "0.6.3"
libp2p-core = "0.34.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "sync", "macros", "io-util"] }
async-stream = "0.3.3"
url = "2.2.2"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
