[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
libp2p = "0.46.1"
libp2p-yamux = "0.38.0"
