[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
libp2p = "0.46.1"
libp2p-yamux = "0.38.0"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "sync", "tokio-macros", "io-util"] }
actix-web = "4.1.0"
serde = "1.0.143"
serde_json = "1.0.83"
